--- a/app/src/main/res/navigation/sign_nav_graph.xml
+++ b/app/src/main/res/navigation/sign_nav_graph.xml
@@ -8,19 +8,19 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.septemblue.insorma.sign.LoginFragment"
-        android:label="login_fragment">
-<!--        tools:layout="@layout/login_fragment" >-->
-<!--        <action-->
-<!--            android:id="@+id/action_loginFragment_to_registerFragment"-->
-<!--            app:destination="@id/registerFragment" />-->
+        android:label="login_fragment"
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/registerFragment" />
     </fragment>
-<!--    <fragment-->
-<!--        android:id="@+id/registerFragment"-->
-<!--        android:name="com.septemblue.insorma.sign.RegisterFragment"-->
-<!--        android:label="register_fragment"-->
-<!--        tools:layout="@layout/register_fragment" >-->
-<!--        <action-->
-<!--            android:id="@+id/action_registerFragment_to_loginFragment"-->
-<!--            app:destination="@id/loginFragment" />-->
-<!--    </fragment>-->
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.septemblue.insorma.sign.RegisterFragment"
+        android:label="register_fragment"
+        tools:layout="@layout/fragment_register">
+        <action
+            android:id="@+id/action_registerFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
 </navigation>
