--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,9 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".main.HomeFragment">
 
-    <TextView
+    <ListView
+        android:id="@+id/furniture_listview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+        android:layout_height="match_parent">
+
+    </ListView>
 
 </FrameLayout>
