--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -10,4 +10,9 @@
         android:name="com.septemblue.insorma.main.HomeFragment"
         android:label="Home"
         tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/furnitureDetailFragment"
+        android:name="com.septemblue.insorma.main.FurnitureDetailFragment"
+        android:label="Furniture Detail"
+        tools:layout="@layout/fragment_furniture_detail" />
 </navigation>
