implement Transaction History

--- a/app/src/main/res/menu/main_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/main_bottom_nav_menu.xml
@@ -6,9 +6,9 @@
         android:icon="@drawable/baseline_home_black_24dp"
         android:title="Home"
         app:showAsAction="always"/>
-    <!--        <item-->
-    <!--            android:id="@+id/transactonHistoryFragment"-->
-    <!--            android:icon="@drawable/baseline_receipt_black_24dp"-->
-    <!--            android:title="TransactionHistory"-->
-    <!--            app:showAsAction="always"/>-->
+    <item
+        android:id="@+id/transactionHistoryFragment"
+        android:icon="@drawable/baseline_receipt_black_24dp"
+        android:title="TransactionHistory"
+        app:showAsAction="always"/>
 </menu>
