--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -20,4 +20,9 @@
         android:name="com.septemblue.insorma.main.TransactionHistoryFragment"
         android:label="Transaction History"
         tools:layout="@layout/fragment_transaction_history" />
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.septemblue.insorma.main.ProfileFragment"
+        android:label="Profile"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
