--- a/app/src/main/res/menu/main_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/main_bottom_nav_menu.xml
@@ -5,7 +5,7 @@
         android:id="@+id/homeFragment"
         android:icon="@drawable/baseline_home_black_24dp"
         android:title="Home"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/transactionHistoryFragment"
         android:icon="@drawable/baseline_receipt_black_24dp"
