Adapter, DiffUtilCallback, ViewHolder, Layout

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,11 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".main.HomeFragment">
 
-    <ListView
-        android:id="@+id/furniture_listview"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/furniture_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </ListView>
+    </androidx.recyclerview.widget.RecyclerView>
 
 </FrameLayout>
