--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -9,12 +9,20 @@
         android:id="@+id/homeFragment"
         android:name="com.septemblue.insorma.main.HomeFragment"
         android:label="Home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/furniture_more_detail"
+            app:destination="@id/furnitureDetailFragment" />
+    </fragment>
     <fragment
         android:id="@+id/furnitureDetailFragment"
         android:name="com.septemblue.insorma.main.FurnitureDetailFragment"
         android:label="Furniture Detail"
-        tools:layout="@layout/fragment_furniture_detail" />
+        tools:layout="@layout/fragment_furniture_detail" >
+        <argument
+            android:name="furnitureId"
+            app:argType="string" />
+    </fragment>
     <fragment
         android:id="@+id/transactionHistoryFragment"
         android:name="com.septemblue.insorma.main.TransactionHistoryFragment"
