--- a/app/src/main/res/layout/main_furniture_item.xml
+++ b/app/src/main/res/layout/main_furniture_item.xml
@@ -5,46 +5,55 @@
     <data>
 
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp">
 
-        <ImageView
-            android:id="@+id/furniture_image"
-            android:layout_width="94dp"
-            android:layout_height="90dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/furniture_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintStart_toEndOf="@+id/furniture_image"
-            app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:id="@+id/furniture_image"
+                android:layout_width="68dp"
+                android:layout_height="58dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/furniture_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintStart_toEndOf="@+id/furniture_image"
-            app:layout_constraintTop_toBottomOf="@+id/furniture_title" />
+            <TextView
+                android:id="@+id/furniture_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:textSize="9sp"
+                app:layout_constraintStart_toEndOf="@+id/furniture_image"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/furniture_detail"
-            android:layout_width="87dp"
-            android:layout_height="33dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="12dp"
-            android:text="@string/furniture_detail_more"
-            app:layout_constraintStart_toEndOf="@+id/furniture_image"
-            app:layout_constraintTop_toBottomOf="@+id/furniture_price" />
+            <TextView
+                android:id="@+id/furniture_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:textSize="9sp"
+                app:layout_constraintStart_toEndOf="@+id/furniture_image"
+                app:layout_constraintTop_toBottomOf="@+id/furniture_title" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <Button
+                android:id="@+id/furniture_detail"
+                android:layout_width="75dp"
+                android:layout_height="31dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/furniture_detail_more"
+                android:textSize="8sp"
+                app:layout_constraintStart_toEndOf="@+id/furniture_image"
+                app:layout_constraintTop_toBottomOf="@+id/furniture_price" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
