--- a/app/src/main/res/layout/fragment_furniture_detail.xml
+++ b/app/src/main/res/layout/fragment_furniture_detail.xml
@@ -26,6 +26,24 @@
         app:layout_constraintTop_toBottomOf="@+id/furniture_detail_image" />
 
     <TextView
+        android:id="@+id/furniture_detail_rating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/furniture_detail_price" />
+
+    <TextView
+        android:id="@+id/furniture_detail_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/furniture_detail_rating" />
+
+    <TextView
         android:id="@+id/furniture_detail_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -34,26 +52,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/furniture_detail_title" />
 
+    <!--    android:id="@+id/furniture_detail_quantity"-->
+
     <TextView
         android:id="@+id/furniture_detail_text_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="104dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         android:text="@string/furniture_detail_text_quantity"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/furniture_detail_price" />
-    <!--    android:id="@+id/furniture_detail_quantity"-->
+        app:layout_constraintTop_toBottomOf="@+id/furniture_detail_description" />
 
     <EditText
         android:id="@+id/furniture_detail_quantity"
         android:layout_width="112dp"
         android:layout_height="44dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="152dp"
         android:hint="@string/one_number"
-        android:text="@string/zero"
         android:inputType="number"
+        android:text="@string/zero"
         app:layout_constraintStart_toEndOf="@+id/furniture_detail_text_quantity"
         app:layout_constraintTop_toBottomOf="@+id/furniture_detail_image" />
 
