--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -31,7 +31,7 @@
             android:layout_marginStart="52dp"
             android:layout_marginTop="10dp"
             android:hint="@string/password_hint"
-            android:inputType="textVisiblePassword"
+            android:inputType="textPassword"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/login_email_address" />
 
