--- a/app/src/main/res/menu/main_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/main_bottom_nav_menu.xml
@@ -11,4 +11,9 @@
         android:icon="@drawable/baseline_receipt_black_24dp"
         android:title="TransactionHistory"
         app:showAsAction="always"/>
+    <item
+        android:id="@+id/map"
+        android:icon="@drawable/baseline_receipt_black_24dp"
+        android:title="About"
+        app:showAsAction="always"/>
 </menu>
